feat: replace Set.of() and List.of() with Collections.emptySet() and Collections.emptyList() for compatibility